hphp/test/slow/typedef/typedef_unique.php.expectf

Fatal error: The name Foo is already defined as a class in %s on line 6
